--- a/.github/workflows/dev-images.yml
+++ b/.github/workflows/dev-images.yml
@@ -42,7 +42,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.MINDCRAFTCONTAINER_TOKEN }}
 
       # Login to Docker Hub
       - name: Login to Docker Hub
