--- a/deploy-compose.yml
+++ b/deploy-compose.yml
@@ -1,17 +1,16 @@
-version: "3.8"
+version: '3.8'
 services:
   api:
     # build:
     #   context: .
     #   dockerfile: Dockerfile.multi
     #   target: api-build
-    image: ghcr.io/danny-avila/librechat-dev-api:latest
+    image: ghcr.io/edsplore/mindcraft-chat:latest
     container_name: LibreChat-API
     ports:
       - 3080:3080
     depends_on:
       - mongodb
-      - rag_api
     restart: always
     extra_hosts:
     - "host.docker.internal:host-gateway"
@@ -20,16 +19,13 @@ services:
     environment:
       - HOST=0.0.0.0
       - NODE_ENV=production
-      - MONGO_URI=mongodb://mongodb:27017/LibreChat
+      - MONGO_URI=mongodb+srv://eureko:fgRWXc2wjDoiXzlF@render-eureko.htpriqc.mongodb.net/Eureko?retryWrites=true
       - MEILI_HOST=http://meilisearch:7700
-      - RAG_PORT=${RAG_PORT:-8000}
-      - RAG_API_URL=http://rag_api:${RAG_PORT:-8000}
     volumes:
-      - type: bind
-        source: ./librechat.yaml
-        target: /app/librechat.yaml
       - ./images:/app/client/public/images
+      - ./librechat.yaml:/app/librechat.yaml
       - ./logs:/app/api/logs
+      - ./uploads:/app/uploads
   client:
     build:
       context: .
@@ -56,7 +52,6 @@ services:
   meilisearch:
     container_name: chat-meilisearch
     image: getmeili/meilisearch:v1.7.3
-    restart: always
     # ports: # Uncomment this to access meilisearch from outside docker
     #   - 7700:7700 # if exposing these ports, make sure your master key is not the default value
     env_file:
@@ -66,25 +61,3 @@ services:
       - MEILI_NO_ANALYTICS=true
     volumes:
       - ./meili_data_v1.7:/meili_data
-  vectordb:
-    image: ankane/pgvector:latest
-    environment:
-      POSTGRES_DB: mydatabase
-      POSTGRES_USER: myuser
-      POSTGRES_PASSWORD: mypassword
-    restart: always
-    volumes:
-      - pgdata2:/var/lib/postgresql/data
-  rag_api:
-    image: ghcr.io/danny-avila/librechat-rag-api-dev-lite:latest
-    environment:
-      - DB_HOST=vectordb
-      - RAG_PORT=${RAG_PORT:-8000}
-    restart: always
-    depends_on:
-      - vectordb
-    env_file:
-      - .env
-
-volumes:
-  pgdata2:
