--- a/deploy-compose.yml
+++ b/deploy-compose.yml
@@ -1,16 +1,17 @@
-version: '3.8'
+version: "3.8"
 services:
   api:
     # build:
     #   context: .
     #   dockerfile: Dockerfile.multi
     #   target: api-build
-    image: ghcr.io/edsplore/darwiz-librechat:latest
+    image: ghcr.io/danny-avila/librechat-api:latest
     container_name: LibreChat-API
     ports:
       - 3080:3080
     depends_on:
       - mongodb
+      - rag_api
     restart: always
     extra_hosts:
     - "host.docker.internal:host-gateway"
@@ -19,13 +20,16 @@ services:
     environment:
       - HOST=0.0.0.0
       - NODE_ENV=production
-      - MONGO_URI=mongodb+srv://eureko:fgRWXc2wjDoiXzlF@render-eureko.htpriqc.mongodb.net/Eureko?retryWrites=true
+      - MONGO_URI=mongodb://mongodb:27017/LibreChat
       - MEILI_HOST=http://meilisearch:7700
+      - RAG_PORT=${RAG_PORT:-8000}
+      - RAG_API_URL=http://rag_api:${RAG_PORT:-8000}
     volumes:
+      - type: bind
+        source: ./librechat.yaml
+        target: /app/librechat.yaml
       - ./images:/app/client/public/images
-      - ./librechat.yaml:/app/librechat.yaml
       - ./logs:/app/api/logs
-      - ./uploads:/app/uploads
   client:
     build:
       context: .
@@ -40,10 +44,6 @@ services:
     restart: always
     volumes:
       - ./client/nginx.conf:/etc/nginx/conf.d/default.conf
-      - /etc/letsencrypt/live/chat.eureko.ai:/etc/letsencrypt/live/chat.eureko.ai
-      - /etc/letsencrypt/archive/chat.eureko.ai:/etc/letsencrypt/archive/chat.eureko.ai
-      - /etc/letsencrypt/options-ssl-nginx.conf:/etc/letsencrypt/options-ssl-nginx.conf
-      - /etc/letsencrypt/ssl-dhparams.pem:/etc/letsencrypt/ssl-dhparams.pem
   mongodb:
     container_name: chat-mongodb
     # ports:  # Uncomment this to access mongodb from outside docker, not safe in deployment
@@ -56,6 +56,7 @@ services:
   meilisearch:
     container_name: chat-meilisearch
     image: getmeili/meilisearch:v1.7.3
+    restart: always
     # ports: # Uncomment this to access meilisearch from outside docker
     #   - 7700:7700 # if exposing these ports, make sure your master key is not the default value
     env_file:
@@ -65,3 +66,25 @@ services:
       - MEILI_NO_ANALYTICS=true
     volumes:
       - ./meili_data_v1.7:/meili_data
+  vectordb:
+    image: ankane/pgvector:latest
+    environment:
+      POSTGRES_DB: mydatabase
+      POSTGRES_USER: myuser
+      POSTGRES_PASSWORD: mypassword
+    restart: always
+    volumes:
+      - pgdata2:/var/lib/postgresql/data
+  rag_api:
+    image: ghcr.io/danny-avila/librechat-rag-api-dev-lite:latest
+    environment:
+      - DB_HOST=vectordb
+      - RAG_PORT=${RAG_PORT:-8000}
+    restart: always
+    depends_on:
+      - vectordb
+    env_file:
+      - .env
+
+volumes:
+  pgdata2:
