--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -8,8 +8,7 @@
 
 #     # To Configure SSL, comment all lines within the Non-SSL section and uncomment all lines under the SSL section. 
 #     ########################################  Non-SSL  ########################################
-#     server_name localhost;
- 
+#     server_name localhost 
 #     # Increase the client_max_body_size to allow larger file uploads
 #     # The default limits for image uploads as of 11/22/23 is 20MB/file, and 25MB/request
 #     client_max_body_size 25M;
