--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -54,7 +54,7 @@ server {
    ssl_stapling_verify on;
 
    # verify chain of trust of OCSP response using Root CA and Intermediate certs
-   ssl_trusted_certificate /etc/nginx/ssl/ca.crt;
+   ssl_trusted_certificate /etc/letsencrypt/live/personal.helpjosephai.com/fullchain.pem;
 
    # replace with the IP address of your resolver
    resolver 127.0.0.1;
