--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -39,7 +39,7 @@ server {
    ssl_session_tickets off;
 
    # curl https://ssl-config.mozilla.org/ffdhe2048.txt > /etc/nginx/ssl/dhparam
-   ssl_dhparam /etc/nginx/ssl/dhparam;
+   ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
    # intermediate configuration
    ssl_protocols TLSv1.2 TLSv1.3;
