--- a/docker-compose.override.yml.example
+++ b/docker-compose.override.yml.example
@@ -125,7 +125,7 @@ version: '3.4'
 #      - "4000:8000"
 #    command: [ "--config", "/app/config.yaml", "--port", "8000", "--num_workers", "8" ]
 #    environment:
-#      OPENAI_API_KEY: none ## needs to be set if ollama's openai api compatibility is used
+#      OPENAI_API_KEY_UPDATED: none ## needs to be set if ollama's openai api compatibility is used
 #      GOOGLE_APPLICATION_CREDENTIALS: /app/application_default_credentials.json ## only if using Google Vertex
 #      REDIS_HOST: redis
 #      REDIS_PORT: 6379
