--- a/deploy-compose.yml
+++ b/deploy-compose.yml
@@ -5,7 +5,7 @@ services:
     #   context: .
     #   dockerfile: Dockerfile.multi
     #   target: api-build
-    image: ghcr.io/edsplore/mindcraft-chat:latest
+    image: ghcr.io/edsplore/mindcraft-globe:latest
     container_name: LibreChat-API
     ports:
       - 3080:3080
@@ -44,10 +44,10 @@ services:
     restart: always
     volumes:
       - ./client/nginx.conf:/etc/nginx/conf.d/default.conf
-      - /etc/letsencrypt/live/personal.helpjosephai.com:/etc/letsencrypt/live/personal.helpjosephai.com
-      - /etc/letsencrypt/archive/personal.helpjosephai.com:/etc/letsencrypt/archive/personal.helpjosephai.com
-      - /etc/letsencrypt/options-ssl-nginx.conf:/etc/letsencrypt/options-ssl-nginx.conf
-      - /etc/letsencrypt/ssl-dhparams.pem:/etc/letsencrypt/ssl-dhparams.pem
+      # - /etc/letsencrypt/live/personal.helpjosephai.com:/etc/letsencrypt/live/personal.helpjosephai.com
+      # - /etc/letsencrypt/archive/personal.helpjosephai.com:/etc/letsencrypt/archive/personal.helpjosephai.com
+      # - /etc/letsencrypt/options-ssl-nginx.conf:/etc/letsencrypt/options-ssl-nginx.conf
+      # - /etc/letsencrypt/ssl-dhparams.pem:/etc/letsencrypt/ssl-dhparams.pem
   mongodb:
     container_name: chat-mongodb
     # ports:  # Uncomment this to access mongodb from outside docker, not safe in deployment
